--- a/.gitignore
+++ b/.gitignore
@@ -3,18 +3,18 @@
 /public/storage
 /storage/*.key
 /vendor
-.env
-.env.testing
-.env.backup
+/.env
+/.env.testing
+/.env.backup
 .phpunit.result.cache
 Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
-.docker/dbdata/
-.idea/
-.vscode/
-.history/
-.devcontainer/
+/.docker/dbdata/
+/.idea/
+/.vscode/
+/.history/
+/.devcontainer/
 /.phpstorm.meta.php
 /_ide_helper.php
