--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -1,11 +1,9 @@
 version: '3'
 
 services:
-
     app:
         build: .
-        container_name: micro-videos-app
-        entrypoint: dockerize -wait tcp://db:3306 -timeout 40s ./.docker/entrypoint.sh
+        container_name: app
         volumes:
             - .:/var/www
         networks:
@@ -16,7 +14,7 @@ services:
 
     nginx:
         build: .docker/nginx
-        container_name: micro-videos-nginx
+        container_name: nginx
         restart: always
         tty: true
         ports:
@@ -28,30 +26,33 @@ services:
         depends_on:
             - app
 
-    db:
-        build: ./.docker/mysql
-        container_name: micro-videos-db
-        restart: always
-        tty: true
-        ports:
-            - "33006:3306"
-        volumes:
-            - ./.docker/dbdata:/var/lib/mysql
-            - ./.docker/mysql:/docker-entrypoint-initdb.d
-        environment:
-            - MYSQL_ROOT_PASSWORD=root
-            - MYSQL_USER=root
-        networks:
-            - app-network
-
     redis:
         image: redis:alpine
-        container_name: micro-videos-redis
         expose:
             - 6379
         networks:
             - app-network
 
+    db:
+        build: .docker/mysql
+        image: mysql:5.7
+        command: --innodb-use-native-aio=0
+        container_name: db
+        restart: always
+        tty: true
+        ports:
+            - "3306:3306"
+        volumes:
+          - ./.docker/dbdata:/var/lib/mysql
+          - ./.docker/mysql:/docker-entrypoint-initdb.d
+          environment:
+            - MYSQL_ROOT_PASSWORD=root
+            - MYSQL_USER=root
+          networks:
+            - app-network
+
+
 networks:
     app-network:
         driver: bridge
+
