--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,28 +6,28 @@ steps:
 
   - id: "Permissão em www"
     name: 'docker'
-    args: [ 'exec','-u','root','-t','app','chown','-R','www-data:www-data','/var/www' ]
+    args: [ 'exec','-u','root','-t','micro-videos-app','chown','-R','www-data:www-data','/var/www' ]
 
   - id: "Executando composer"
     name: 'docker'
-    args: [ 'exec', '-t', 'app', 'composer', 'install' ]
+    args: [ 'exec', '-t', 'micro-videos-app', 'composer', 'install' ]
 
   - id: "Copiando .env"
     name: 'docker'
-    args: [ 'exec', '-t', 'app', 'cp', '/var/www/.env.example', '/var/www/.env' ]
+    args: [ 'exec', '-t', 'micro-videos-app', 'cp', '/var/www/.env.example', '/var/www/.env' ]
 
   - id: "Copiando .env.testing"
     name: 'docker'
-    args: [ 'exec', '-t', 'app', 'cp', '/var/www/.env.testing.example', '/var/www/.env.testing' ]
+    args: [ 'exec', '-t', 'micro-videos-app', 'cp', '/var/www/.env.testing.example', '/var/www/.env.testing' ]
 
   - id: "Executando key:generate"
     name: 'docker'
-    args: [ 'exec', '-t', 'app', 'php', '/var/www/artisan', 'key:generate' ]
+    args: [ 'exec', '-t', 'micro-videos-app', 'php', '/var/www/artisan', 'key:generate' ]
 
   - id: "Executando migrations"
     name: 'docker'
-    args: [ 'exec', '-t', 'app', 'php', '/var/www/artisan', 'migrate' ]
+    args: [ 'exec', '-t', 'micro-videos-app', 'php', '/var/www/artisan', 'migrate' ]
 
   - id: "Executando phpunit"
     name: 'docker'
-    args: [ 'exec', '-t', 'app', 'php', '/var/www/vendor/bin/phpunit', '-c', '/var/www/phpunit.xml' ]
+    args: [ 'exec', '-t', 'micro-videos-app', 'php', '/var/www/vendor/bin/phpunit', '-c', '/var/www/phpunit.xml' ]
