--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:3wD81iZEV7h3fUr15PyavPzWlnElWdzpJ9X8CowrvKw=
+APP_KEY=base64:M3+auyFIHpNdfA8yYjHA3zvahSqkqT9vaPPXY1LqYKA=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -18,6 +18,7 @@ CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
+FILESYSTEM_DRIVER=video_local
 
 REDIS_HOST=redis
 REDIS_PASSWORD=null
