--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:M3+auyFIHpNdfA8yYjHA3zvahSqkqT9vaPPXY1LqYKA=
+APP_KEY=base64:g5bkAPqHVHLZE4dykg684LTGjrdx1nHLQhQQnwOxZ7A=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -43,3 +43,8 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+GOOGLE_CLOUD_PROJECT_ID=codeeducation-test-290418
+GOOGLE_CLOUD_KEY_FILE=service-account-storage.json
+GOOGLE_CLOUD_STORAGE_BUCKET=code-micro-videos-rrc
+GOOGLE_CLOUD_STORAGE_API_URI=https://storage.cloud.google.com/code_micro_videos-rrc
