--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,8 +1,25 @@
 steps:
 
+  - id: 'Gerando service-account-storage.json'
+    name: 'gcr.io/cloud-builders/gcloud'
+    args:
+      - kms
+      - decrypt
+      - --cyphertext-file=./storage/credentials/google/service-account-storage.json.enc
+      - --plaintext-file=./storage/credentials/google/service-account-storage.json
+      - --location=global
+      - --keyring=testing
+      - --key=service-account
+
   - id: "Executando docker-compose"
     name: 'docker/compose'
     args: [ '-f', 'docker-compose.yaml', 'up', '-d' ]
+    env:
+      - GOOGLE_CLOUD_PROJECT_ID=$PROJECT_ID
+      - GOOGLE_CLOUD_KEY_FILE=service-account-storage.json
+      - GOOGLE_CLOUD_STORAGE_BUCKET=code-micro-videos-rrc
+      - GOOGLE_CLOUD_STORAGE_API_URI=https://storage.cloud.google.com/code_micro_videos-rrc
+      - TESTING_PROD=true
 
   - id: "Permissão em www"
     name: 'docker'
