Implementando API Resource

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:g5bkAPqHVHLZE4dykg684LTGjrdx1nHLQhQQnwOxZ7A=
+APP_KEY=base64:Hzx21aTfE9D1aRdfGOGkSB8xhq4WP0IHpysc2FV0V/o=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 
 LOG_CHANNEL=stack
 
