--- a/backend/.env.example
+++ b/backend/.env.example
@@ -48,3 +48,6 @@ GOOGLE_CLOUD_PROJECT_ID=codeeducation-test-290418
 GOOGLE_CLOUD_KEY_FILE=service-account-storage.json
 GOOGLE_CLOUD_STORAGE_BUCKET=code-micro-videos-rrc
 GOOGLE_CLOUD_STORAGE_API_URI=https://storage.cloud.google.com/code_micro_videos-rrc
+
+
+CORS_ORIGINS=http://localhost:3000
