--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,14 +9,20 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "@types/jest": "^26.0.19",
+    "@types/mui-datatables": "^3.7.0",
     "@types/node": "^14.14.16",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
+    "@types/route-parser": "^0.1.3",
+    "axios": "^0.21.1",
+    "date-fns": "^2.16.1",
+    "mui-datatables": "^3.7.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "route-parser": "0.0.5",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
   },
