--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^1.3.2",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.8",
@@ -15,6 +16,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
     "@types/route-parser": "^0.1.3",
+    "@types/yup": "^0.29.11",
     "axios": "^0.21.1",
     "date-fns": "^2.16.1",
     "mui-datatables": "^3.7.4",
@@ -25,7 +27,8 @@
     "react-scripts": "4.0.1",
     "route-parser": "0.0.5",
     "typescript": "^4.1.3",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "yup": "^0.32.8"
   },
   "scripts": {
     "start": "react-scripts start",
