--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.21.1",
     "date-fns": "^2.16.1",
     "mui-datatables": "^3.7.4",
+    "notistack": "^1.0.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.14.1",
