--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "@types/jest": "^26.0.19",
+    "@types/lodash": "^4.14.168",
     "@types/mui-datatables": "^3.7.0",
     "@types/node": "^14.14.16",
     "@types/react": "^17.0.0",
@@ -19,6 +20,7 @@
     "@types/yup": "^0.29.11",
     "axios": "^0.21.1",
     "date-fns": "^2.16.1",
+    "lodash": "^4.17.20",
     "mui-datatables": "^3.7.4",
     "notistack": "^1.0.3",
     "react": "^17.0.1",
@@ -26,8 +28,11 @@
     "react-hook-form": "^6.14.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "redux": "^4.0.5",
+    "reduxsauce": "^1.2.0",
     "route-parser": "0.0.5",
     "typescript": "^4.1.3",
+    "use-debounce": "^5.2.0",
     "web-vitals": "^0.2.4",
     "yup": "^0.32.8"
   },
